--- a/depends.ini
+++ b/depends.ini
@@ -4,3 +4,8 @@ jquery=1
 momentjs=1
 cssjs=2
 bootstrap3datetimepicker=1
+[depends_2]
+jquery=1,2
+momentjs=1,2
+cssjs=2
+bootstrap3datetimepicker=2
